--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 
-.raleway-rale {
+.raleway-normal {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -35,6 +35,7 @@ nav{
 
 .header{
     background-image: url('../Assets/Hero-bg.png');
+  
 }
 header div{
     text-align: center;
@@ -61,4 +62,11 @@ header div{
     color: #252432;
    
    
+}
+.img-format img {
+  width: 403px;
+  height: 328px;
+  border-radius: 48px;
+  display: block;
+  overflow: hidden;
 }
