--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -16,6 +16,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     margin: 50px 150px;
+     /* background-color: rgba(173, 230, 223, 0.277); */
 }
 .nav-title{
     font-weight: black;
@@ -45,11 +46,13 @@ header div{
     font-weight: bold;
     font-size: 65px;
     color: #252432;
+     /* background-color: rgba(173, 230, 223, 0.277); */
 }
 .Action{
     display: flex;
     justify-content: space-between;
     padding: 141px 814px 159px;
+    /* background-color: rgba(173, 230, 223, 0.277); */
 }
 .section-title{
     font-weight: bold;
@@ -82,7 +85,7 @@ header div{
 }
 .type{
     font-weight: bold;
-    font-size: 80;
+    font-size: 200;
     color: #4E47FF;
     width: 135px;
     height: 50px;
@@ -107,3 +110,31 @@ background-color: #4d47ff48;
     color: #000000;
     
 }
+.touch{
+    padding: 200px 612px;
+    font-weight: bold;
+    font-size: 97px;
+    color: #000000;
+}
+.section{
+    display: flex;
+    gap: 115px;
+}
+.section-column{
+    width: 50%;
+}
+ input[type="text"],input[type="email"],textarea{
+    height: 70px;
+    border-radius: 5px;
+    /* background-color: #FFFFFF; */
+    display: block;
+    width: 100%;
+    padding: 32px 20px;
+    border: none;
+    font-weight: 400;
+    font-size: 20px;
+    gap: 10px;
+ }
+ .secondary-bg{
+    background-color: #4d47ff0b;
+ }
